[project]
name = "basic-sas-mcp"
version = "0.1.0"
description = "Basic SAS MCP server"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.0",
    "markdownify>=1.2.0",
    "pandas>=2.3.0",
    "saspy>=5.103.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "sas-kernel>=2.4.13",
]
